--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 body {
     color: var(--dark);
-    background: var(--red);
+    background: blue;
 }
 
 .navegation {
@@ -128,7 +128,7 @@ body {
 
 .home-img {
     width: 100%;
-}
+   }
 
 @media (max-width:785px) {
     .navegation {
